스프링 작업 커밋.

--- a/beautyChu/.settings/gradle/org.springsource.ide.eclipse.gradle.core.prefs
+++ b/beautyChu/.settings/gradle/org.springsource.ide.eclipse.gradle.core.prefs
@@ -1,4 +1,5 @@
 #org.springsource.ide.eclipse.gradle.core.preferences.GradleProjectPreferences
-#Wed Nov 26 10:02:47 KST 2014
+#Sun Jan 04 17:52:54 KST 2015
+build.family.org.gradle.tooling.model.eclipse.HierarchicalEclipseProject=;
 org.springsource.ide.eclipse.gradle.linkedresources=
 org.springsource.ide.eclipse.gradle.rootprojectloc=
